<?xml version="1.0"?>
<package>

  <name>move_group_manager</name>
  <version>0.0.0</version>
  <description>The move_group_manager package.</description>

  <maintainer email="hauffn@informatik.uni-freiburg.de">Nico Hauff</maintainer>
  <author email="hauffn@informatik.uni-freiburg.de">Nico Hauff</author>
  <author email="eitel@cs.uni-freiburg.de">Andreas Eitel</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>

</package>