<?xml version="1.0"?>
<package>

  <name>pr2_grasp</name>
  <version>0.0.0</version>
  <description>The pr2_grasp package.</description>

  <maintainer email="hauffn@informatik.uni-freiburg.de">Nico Hauff</maintainer>
  <author email="hauffn@informatik.uni-freiburg.de">Nico Hauff</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>gpd</build_depend>
  <build_depend>table_detection</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gpd</run_depend>
  <run_depend>table_detection</run_depend>

</package>