<?xml version="1.0"?>
<package>

  <name>pr2_grasp</name>
  <version>0.0.0</version>
  <description>The pr2_grasp package.</description>

  <maintainer email="hauffn@informatik.uni-freiburg.de">Nico Hauff</maintainer>
  <author email="hauffn@informatik.uni-freiburg.de">Nico Hauff</author>
  <author email="eitel@cs.uni-freiburg.de">Andreas Eitel</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>gpd</build_depend>
  <build_depend>planning_scene_manager</build_depend>
  <build_depend>move_group_manager</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>gpd</run_depend>
  <run_depend>planning_scene_manager</run_depend>
  <run_depend>move_group_manager</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>