<?xml version="1.0"?>
<package>

  <name>ros_toolbox</name>
  <version>0.0.0</version>
  <description>The ros_toolbox package.</description>

  <maintainer email="hauffn@informatik.uni-freiburg.de">Nico Hauff</maintainer>
  <author email="hauffn@informatik.uni-freiburg.de">Nico Hauff</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2-ros</build_depend>
  <build_depend>tf2-sensor-msgs</build_depend>
  <build_depend>sensor-msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf2-ros</run_depend>
  <run_depend>tf2-sensor-msgs</run_depend>
  <run_depend>sensor-msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>